--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,7 @@
 {
   "tasks": {
+    "prepare": "deno run -A npm:husky@^8 install",
+    "staged": "deno run -A npm:lint-staged@^13",
     "test": "deno lint && deno fmt --check && deno test -A --no-check",
     "cache": "deno cache --lock=deno.lock --lock-write deps.js dev_deps.js test/hyper.js",
     "test:harness": "deno run --no-check --unstable -A ./test/hyper.js"
