--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
   "*.{md,json,js,ts}": ["deno fmt"],
-  "README.md": ["deno run -A npm:markdown-toc-gen@1 insert", "deno fmt"]
+  "README.md": ["deno run -A --no-lock npm:markdown-toc-gen@1 insert", "deno fmt"]
 }
